[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/fire.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullet.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 4, 4.5 )

[sub_resource type="CircleShape2D" id=13]
radius = 5.0

[node name="Bullet" type="KinematicBody2D" groups=["player_bullets"]]
z_index = 1
collision_layer = 4
collision_mask = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -9.53674e-07, 9.53674e-07 )
scale = Vector2( 0.0559921, 0.0559921 )
frames = SubResource( 9 )
frame = 4
speed_scale = 1.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 10 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.211998, 2.98023e-08 )
scale = Vector2( 0.174269, 0.2 )
rect = Rect2( -10.26, -10, 22.953, 20 )

[node name="timer_to_dissapear" type="Timer" parent="."]
one_shot = true

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="FlameAffection" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameAffection"]
shape = SubResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="timer_to_dissapear" to="." method="_on_timer_to_dissapear_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
